--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ title: Releases
   .good {
     color: #206b00;
   }
+  .warn {
+    color: #ad5f00;
+  }
   .critical {
     color: #7a0000;
   }
@@ -62,6 +65,8 @@ title: Releases
         {% elsif repo.new_commits == 1 %}
           <span class="status">{{ repo.new_commits }} commit since release</span>
         {% elsif repo.new_commits > 10 %}
+          <span class="status warn">{{ repo.new_commits }} commits since release</span>
+        {% elsif repo.new_commits > 20 %}
           <span class="status critical">{{ repo.new_commits }} commits since release</span>
         {% else %}
           <span class="status">{{ repo.new_commits }} commits since release</span>
