--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ title: Releases
           <span class="status good">Up to date</span>
         {% elsif repo.new_commits == 1 %}
           <span class="status">{{ repo.new_commits }} commit since release</span>
-        {% elsif repo.new_commits > 20 %}
+        {% elsif repo.new_commits >= 20 %}
           <span class="status critical">{{ repo.new_commits }} commits since release</span>
-        {% elsif repo.new_commits > 10 %}
+        {% elsif repo.new_commits >= 10 %}
           <span class="status warn">{{ repo.new_commits }} commits since release</span>
         {% else %}
           <span class="status">{{ repo.new_commits }} commits since release</span>
