--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@ title: Releases
 <style>
 
   .wrapper {
-    max-width: 960px;
+    max-width: 1080px;
     width: auto;
   }
 
   section {
-    width: auto;
+    width: calc(100% - 270px);
   }
 
   .name {
