--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@ title: Releases
     color: inherit;
   }
 
+  a:focus,
+  a:hover {
+    font-weight: normal;
+  }
+
   .status a {
     color: inherit;
   }
