--- a/index.html
+++ b/index.html
@@ -22,25 +22,37 @@ title: Releases
     font-weight: normal;
   }
 
-  .status a {
-    color: inherit;
-  }
-
   .name {
     display: block;
     font-weight: normal;
     color: inherit;
   }
 
+  .status {
+    background-color: rgba(212, 212, 212, 0.5);
+    border-radius: 1em;
+    color: #555761;
+    font-size: 0.85em;
+    padding: 0.15em 0.75em;
+  }
+
+  .status a {
+    color: inherit;
+    font-weight: inherit;
+  }
+
   .good {
+    background-color: rgba(209, 255, 130, 0.5);
     color: #206b00;
   }
 
   .warn {
+    background-color: rgba(255, 243, 148, 0.5);
     color: #ad5f00;
   }
 
   .critical {
+    background-color: rgba(255, 140, 130, 0.5);
     color: #7a0000;
   }
 
