--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ title: Releases
 
 {% assign org_href = "https://github.com/eustasy" %}
 
+<script defer src="sortable.mega-advanced.js"></script>
+
 <style>
 
   .wrapper {
