--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Releases
 
 {% assign org_href = "https://github.com/eustasy" %}
 
-<script defer src="sortable.mega-advanced.js"></script>
+<script defer src="sortable.mega-advanced.min.js"></script>
 
 <style>
 
@@ -69,7 +69,7 @@ title: Releases
 
 </style>
 
-<table class="releases">
+<table class="releases sortable">
   <thead>
     <th>Repository</th>
     <th>Release</th>
