--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Releases
+title: Latest Releases and Commits Since
+description: See releases and commits since for eustasy repositories
 ---
 
 {% assign org_href = "https://github.com/eustasy" %}
