--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@ description: See releases and commits since for eustasy repositories
           <span class="status">
             <a href="{{ commits_href }}">{{ repo.new_commits }} commit</a>
           </span>
-        {% elsif repo.new_commits > 1 and repo.new_commits < 10 %}
+        {% elsif repo.new_commits < 3 %}
           <span class="status">
             <a href="{{ commits_href }}">{{ repo.new_commits }} commits</a>
           </span>
-        {% elsif repo.new_commits >= 10 and repo.new_commits < 20 %}
+        {% elsif repo.new_commits < 10 %}
           <span class="status warn">
             <a href="{{ commits_href }}">{{ repo.new_commits }} commits</a>
           </span>
-         {% elsif repo.new_commits >= 20 %}
+         {% else %}
           <span class="status critical">
             <a href="{{ commits_href }}">{{ repo.new_commits }} commits</a>
           </span>
