--- a/normal_checks.html
+++ b/normal_checks.html
@@ -84,10 +84,12 @@ description: Which version of Normal Checks is each repository using?
         <a href="{{ repo_href }}" class="name">{{ repo.name }}</a>
       </td>
       <td data-sort="{{ repo.normal_checks }}">
-        {% if repo.normal_checks == "1.10.1" %}
+        {% if repo.normal_checks == "2.0" %}
           <span class="status good">Up to date</span>
+        {% elsif repo.normal_checks == "1.10.1" %}
+          <span class="status warn">{{ repo.normal_checks }}</span>
         {% elsif repo.normal_checks == "1.10.0" %}
-          <span class="status good">{{ repo.normal_checks }}</span>
+          <span class="status warn">{{ repo.normal_checks }}</span>
         {% elsif repo.normal_checks == "1.9" %}
           <span class="status warn">{{ repo.normal_checks }}</span>
         {% elsif repo.normal_checks == "1.7" %}
