--- a/license_year.html
+++ b/license_year.html
@@ -73,7 +73,7 @@ description: Which version of License Year is each repository using?
 <table class="releases sortable">
   <thead>
     <th>Repository</th>
-    <th>Checks</th>
+    <th>Year</th>
   </thead>
   <tbody>
   {% for repo in site.data.license_year %}
