--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ description: See releases and commits since for eustasy repositories
   </thead>
   <tbody>
   {% for repo in site.data.unreleased_commits %}
-    {% unless site.data.blacklist contains repo.name %}
+    {% unless site.data.exclusions contains repo.name %}
     {% assign repo_href = org_href | append: "/" | append: repo.name %}
     {% assign commits_href = repo_href | append: "/compare/" | append: repo.releases.first.version | append: "...master" %}
     <tr id="{{ repo.name }}" >
