--- a/license_year.html
+++ b/license_year.html
@@ -90,6 +90,10 @@ description: Which version of License Year is each repository using?
           <span class="status critical">{{ repo.license_year }}</span>
         {% elsif repo.license_year == "false" %}
           <span class="status critical">{{ repo.license_year }}</span>
+        {% elsif repo.license_file == "" %}
+          <span class="status critical">{{ repo.license_year }}</span>
+        {% elsif repo.license_file == "false" %}
+          <span class="status critical">{{ repo.license_year }}</span>
         {% else %}
           <span class="status warn">{{ repo.license_year }}</span>
         {% endif %}
