--- a/licenses.html
+++ b/licenses.html
@@ -73,6 +73,7 @@ description: Which Licenses is each repository using?
 <table class="releases sortable">
   <thead>
     <th>Repository</th>
+    <th>License</th>
     <th>Year</th>
   </thead>
   <tbody>
