--- a/merge_types.html
+++ b/merge_types.html
@@ -86,27 +86,27 @@ description: Which merge types are allowed in each repository?
         <a href="{{ repo_href }}" class="name">{{ repo.name }}</a>
       </td>
       <td data-sort="{{ repo.allow_rebase_merge }}">
-        {% if repo.allow_rebase_merge == "true" %}
+        {% if repo.allow_rebase_merge == true %}
           <span class="status good">{{ repo.allow_rebase_merge }}</span>
-        {% elsif repo.allow_rebase_merge == "False" %}
+        {% elsif repo.allow_rebase_merge == false %}
           <span class="status">{{ repo.allow_rebase_merge }}</span>
         {% else %}
           <span class="status critical">{{ repo.allow_rebase_merge }}</span>
         {% endif %}
       </td>
       <td data-sort="{{ repo.allow_squash_merge }}">
-        {% if repo.allow_squash_merge == "true" %}
+        {% if repo.allow_squash_merge == true %}
           <span class="status good">{{ repo.allow_squash_merge }}</span>
-        {% elsif repo.allow_squash_merge == "False" %}
+        {% elsif repo.allow_squash_merge == false %}
           <span class="status">{{ repo.allow_squash_merge }}</span>
         {% else %}
           <span class="status critical">{{ repo.allow_squash_merge }}</span>
         {% endif %}
       </td>
       <td data-sort="{{ repo.allow_merge_commit }}">
-        {% if repo.allow_merge_commit == "true" %}
+        {% if repo.allow_merge_commit == true %}
           <span class="status good">{{ repo.allow_merge_commit }}</span>
-        {% elsif repo.allow_merge_commit == "false" %}
+        {% elsif repo.allow_merge_commit == false %}
           <span class="status">{{ repo.allow_merge_commit }}</span>
         {% else %}
           <span class="status critical">{{ repo.allow_merge_commit }}</span>
