--- a/merge_types.html
+++ b/merge_types.html
@@ -77,6 +77,8 @@ description: Which merge types are allowed in each repository?
     <th>Rebase</th>
     <th>Squash</th>
     <th>Commit</th>
+    <th>Auto</th>
+    <th>DBoM</th>
   </thead>
   <tbody>
   {% for repo in site.data.merge_types %}
@@ -120,6 +122,24 @@ description: Which merge types are allowed in each repository?
           <span class="status">{{ repo.allow_merge_commit }}</span>
         {% else %}
           <span class="status critical">{{ repo.allow_merge_commit }}</span>
+        {% endif %}
+      </td>
+      <td data-sort="{{ repo.allow_auto_merge }}">
+        {% if repo.allow_merge_commit == true %}
+          <span class="status good">{{ repo.allow_auto_merge }}</span>
+        {% elsif repo.allow_merge_commit == false %}
+          <span class="status">{{ repo.allow_auto_merge }}</span>
+        {% else %}
+          <span class="status critical">{{ repo.allow_auto_merge }}</span>
+        {% endif %}
+      </td>
+      <td data-sort="{{ repo.delete_branch_on_merge }}">
+        {% if repo.allow_merge_commit == true %}
+          <span class="status good">{{ repo.delete_branch_on_merge }}</span>
+        {% elsif repo.allow_merge_commit == false %}
+          <span class="status">{{ repo.delete_branch_on_merge }}</span>
+        {% else %}
+          <span class="status critical">{{ repo.delete_branch_on_merge }}</span>
         {% endif %}
       </td>
     </tr>
