--- a/normal_checks.html
+++ b/normal_checks.html
@@ -73,7 +73,9 @@ description: Which version of Normal Checks is each repository using?
 <table class="releases sortable">
   <thead>
     <th>Repository</th>
-    <th>Checks</th>
+    <th>Default Branch</th>
+    <th>Version</th>
+    <th>Status</th>
   </thead>
   <tbody>
   {% for repo in site.data.normal_checks %}
