--- a/licenses.html
+++ b/licenses.html
@@ -75,6 +75,7 @@ description: Which Licenses is each repository using?
     <th>Repository</th>
     <th>License</th>
     <th>Year</th>
+    <th>Last Commit</th>
   </thead>
   <tbody>
   {% for repo in site.data.licenses %}
