--- a/licenses.html
+++ b/licenses.html
@@ -104,7 +104,7 @@ description: Which Licenses is each repository using?
         {% endif %}
       </td>
       <td data-sort="{{ repo.pushed_at }}">
-        {{ repo.pushed_at | date: "%Y-%M" }}
+        {{ repo.pushed_at | date: "%Y-%m" }}
       </td>
     </tr>
     {% endunless %}
